feat(backend): connect handler; update api (#12)
